--- a/manuscript/HistoricalAcreage.htm
+++ b/manuscript/HistoricalAcreage.htm
@@ -12,16 +12,20 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <![if !supportTabStrip]>
 <link id="shLink" href="HistoricalAcreage_files/sheet001.htm">
 <link id="shLink" href="HistoricalAcreage_files/sheet002.htm">
+<link id="shLink" href="HistoricalAcreage_files/sheet003.htm">
+<link id="shLink" href="HistoricalAcreage_files/sheet004.htm">
 
 <link id="shLink">
 
 <script language="JavaScript">
 <!--
- var c_lTabs=2;
+ var c_lTabs=4;
 
  var c_rgszSh=new Array(c_lTabs);
  c_rgszSh[0] = "Acreage";
- c_rgszSh[1] = "Prices Recieved";
+ c_rgszSh[1] = "Yield";
+ c_rgszSh[2] = "Crop Condition";
+ c_rgszSh[3] = "Prices Recieved";
 
 
 
@@ -51,7 +55,7 @@ function fnGetIEVer()
 function fnBuildFrameset()
 {
  var szHTML="<frameset rows=\"*,18\" border=0 width=0 frameborder=no framespacing=0>"+
-  "<frame src=\""+document.all.item("shLink")[0].href+"\" name=\"frSheet\" noresize>"+
+  "<frame src=\""+document.all.item("shLink")[1].href+"\" name=\"frSheet\" noresize>"+
   "<frameset cols=\"54,*\" border=0 width=0 frameborder=no framespacing=0>"+
   "<frame src=\"\" name=\"frScroll\" marginwidth=0 marginheight=0 scrolling=no>"+
   "<frame src=\"\" name=\"frTabs\" marginwidth=0 marginheight=0 scrolling=no>"+
@@ -303,8 +307,16 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="HistoricalAcreage_files/sheet001.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>Prices Recieved</x:Name>
+    <x:Name>Yield</x:Name>
     <x:WorksheetSource HRef="HistoricalAcreage_files/sheet002.htm"/>
+   </x:ExcelWorksheet>
+   <x:ExcelWorksheet>
+    <x:Name>Crop Condition</x:Name>
+    <x:WorksheetSource HRef="HistoricalAcreage_files/sheet003.htm"/>
+   </x:ExcelWorksheet>
+   <x:ExcelWorksheet>
+    <x:Name>Prices Recieved</x:Name>
+    <x:WorksheetSource HRef="HistoricalAcreage_files/sheet004.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
   <x:Stylesheet HRef="HistoricalAcreage_files/stylesheet.css"/>
@@ -312,6 +324,7 @@ function fnSetActiveSheet(iSh)
   <x:WindowWidth>28800</x:WindowWidth>
   <x:WindowTopX>0</x:WindowTopX>
   <x:WindowTopY>0</x:WindowTopY>
+  <x:ActiveSheet>1</x:ActiveSheet>
   <x:MaxChange>0.000999999999999945</x:MaxChange>
   <x:ProtectStructure>False</x:ProtectStructure>
   <x:ProtectWindows>False</x:ProtectWindows>
@@ -320,7 +333,7 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="HistoricalAcreage_files/sheet001.htm" name="frSheet">
+ <frame src="HistoricalAcreage_files/sheet002.htm" name="frSheet">
  <frame src="HistoricalAcreage_files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
