--- a/manuscript/HistoricalAcreage_files/tabstrip.htm
+++ b/manuscript/HistoricalAcreage_files/tabstrip.htm
@@ -25,7 +25,9 @@ A {
 <table border=0 cellspacing=1>
  <tr>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="Arial" color="#000000">Acreage</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet002.htm" target="frSheet"><font face="Arial" color="#000000">Prices Recieved</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet002.htm" target="frSheet"><font face="Arial" color="#000000">Yield</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet003.htm" target="frSheet"><font face="Arial" color="#000000">Crop Condition</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet004.htm" target="frSheet"><font face="Arial" color="#000000">Prices Recieved</font></a>&nbsp;</small></small></b></td>
 
  </tr>
 </table>
