--- a/manuscript/CMECZ2015.htm
+++ b/manuscript/CMECZ2015.htm
@@ -8,24 +8,18 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="HistoricalAcreage_files/filelist.xml">
+<link rel=File-List href="CMECZ2015_files/filelist.xml">
 <![if !supportTabStrip]>
-<link id="shLink" href="HistoricalAcreage_files/sheet001.htm">
-<link id="shLink" href="HistoricalAcreage_files/sheet002.htm">
-<link id="shLink" href="HistoricalAcreage_files/sheet003.htm">
-<link id="shLink" href="HistoricalAcreage_files/sheet004.htm">
+<link id="shLink" href="CMECZ2015_files/sheet001.htm">
 
 <link id="shLink">
 
 <script language="JavaScript">
 <!--
- var c_lTabs=4;
+ var c_lTabs=1;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "Acreage";
- c_rgszSh[1] = "Yield";
- c_rgszSh[2] = "Crop Condition";
- c_rgszSh[3] = "Prices Recieved";
+ c_rgszSh[0] = "CMECZ2015";
 
 
 
@@ -303,24 +297,12 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>Acreage</x:Name>
-    <x:WorksheetSource HRef="HistoricalAcreage_files/sheet001.htm"/>
-   </x:ExcelWorksheet>
-   <x:ExcelWorksheet>
-    <x:Name>Yield</x:Name>
-    <x:WorksheetSource HRef="HistoricalAcreage_files/sheet002.htm"/>
-   </x:ExcelWorksheet>
-   <x:ExcelWorksheet>
-    <x:Name>Crop Condition</x:Name>
-    <x:WorksheetSource HRef="HistoricalAcreage_files/sheet003.htm"/>
-   </x:ExcelWorksheet>
-   <x:ExcelWorksheet>
-    <x:Name>Prices Recieved</x:Name>
-    <x:WorksheetSource HRef="HistoricalAcreage_files/sheet004.htm"/>
+    <x:Name>CMECZ2015</x:Name>
+    <x:WorksheetSource HRef="CMECZ2015_files/sheet001.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
-  <x:Stylesheet HRef="HistoricalAcreage_files/stylesheet.css"/>
-  <x:WindowHeight>14235</x:WindowHeight>
+  <x:Stylesheet HRef="CMECZ2015_files/stylesheet.css"/>
+  <x:WindowHeight>15525</x:WindowHeight>
   <x:WindowWidth>28800</x:WindowWidth>
   <x:WindowTopX>0</x:WindowTopX>
   <x:WindowTopY>0</x:WindowTopY>
@@ -332,8 +314,8 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="HistoricalAcreage_files/sheet001.htm" name="frSheet">
- <frame src="HistoricalAcreage_files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
+ <frame src="CMECZ2015_files/sheet001.htm" name="frSheet">
+ <frame src="CMECZ2015_files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
    <p>This page uses frames, but your browser doesn't support them.</p>
