--- a/manuscript/corn_endingstock_prices.htm
+++ b/manuscript/corn_endingstock_prices.htm
@@ -5,7 +5,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="corn_endingstock_prices_files/filelist.xml">
