--- a/manuscript/corn_endingstock_prices_files/tabstrip.htm
+++ b/manuscript/corn_endingstock_prices_files/tabstrip.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File href="../corn_endingstock_prices.htm">
