--- a/manuscript/lecture8.html
+++ b/manuscript/lecture8.html
@@ -68,12 +68,12 @@
 <div id="feed-and-residual" class="slide section level1">
 <h1>Feed, and Residual</h1>
 <p>The final use category is the most difficult to forecast because its quantity is derived, not estimated. What I mean is the USDA makes estimates of every other row in the balance sheet. Then, to ensure the numbers add up, they infer the Feed and Residual category.</p>
-<p><span class="math">\(Feed\&amp;Residual = Production + Imports + Beginning Stocks + Ending Stocks \\  - FoodSeed\&amp;Industrial - Exports\)</span></p>
+<p><span class="math">\(Feed\&amp;Residual = Production + Imports + Beginning Stocks - Ending Stocks \\  - FoodSeed\&amp;Industrial - Exports\)</span></p>
 </div>
 <div id="feed-and-residual-1" class="slide section level1">
 <h1>Feed, and Residual</h1>
 <p>Since each category on the right hand side is itself estimated with some error, the error for the Feed and Residual category is the sum of the errors of the other categories.</p>
-<p><span class="math">\(\begin{align} Feed\&amp;Residual = (Production + \epsilon_{prod}) + (Imports + \epsilon_{import}) + (Beginning Stocks + \epsilon_{BStocks}) \\ + (Ending Stocks + \epsilon_{EStocks}) - (FoodSeed\&amp;Industrial + \epsilon_{Food}) - (Exports + \epsilon_{Export}) \end{align}\)</span></p>
+<p><span class="math">\(\begin{align} Feed\&amp;Residual = (Production + \epsilon_{prod}) + (Imports + \epsilon_{import}) + (Beginning Stocks + \epsilon_{BStocks}) \\ - (Ending Stocks + \epsilon_{EStocks}) - (FoodSeed\&amp;Industrial + \epsilon_{Food}) - (Exports + \epsilon_{Export}) \end{align}\)</span></p>
 </div>
 <div id="feed-and-residual-2" class="slide section level1">
 <h1>Feed, and Residual</h1>
