build the book website

--- a/index.html
+++ b/index.html
@@ -38,10 +38,45 @@
 
 <h3>Table of Contents</h3>
 
-<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter1.html">Chapter 1</a></p>
-<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter2.html">Chapter 2</a></p>
-<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter3.html">Chapter 3</a></p>
-<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter4.html">Chapter 4</a></p>
+<p> 
+
+<a href="http://mindymallory.github.io/PriceAnalysis/Chapter1.html">Chapter 1</a>: A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced.
+
+</p>
+
+<p> 
+<a href="http://mindymallory.github.io/PriceAnalysis/Chapter2.html">Chapter 2</a>: This chapter serves as an introduction to real-time and historical data sources, as well as an introduction to the analysts that conduct price analysis professionally and help us make sense of commodity prices. 
+
+</p>
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter3.html">Chapter 3</a>: Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. </p>
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter4.html">Chapter 4</a>: Some of the USDA reports contain very sensitive market information causing market prices to adjust rapidly to new information about supply and demand. Access to the contents of a market sensitive report would result in the ability to perform 'insider trading' and obtain nearly risk-less profits.</p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter5.html">Chapter 5</a>: The preceding chapters have served as a background about agricultural markets, and important informational events that drive commodity prices. Going forward, we will focus our energy on the more data and technical questions of actually forecasting elements of the balance sheet - and later, short term price changes using time-series econometric techniques.</p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter6.html">Chapter 6</a>: This chapter reviews the basics of the presentation of economic data, descriptive statistics, visualizations based on charts, graphs, and tables, and the math and mechanics of estimating trend forecasting models.</p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter7.html">Chapter 7</a>: In the WASDE balance sheet for corn there are three use categories. Two account for domestic consumption - Food, Seed and Industrial, and Feed and Residual - while exports make up the third category. Ethanol makes up a large portion of the Food, Seed, and Industrial category, so it is given its own line in the balance sheet. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter8.html">Chapter 8</a>: In the WASDE balance sheet for soybeans there are three use categories. Two account for domestic consumption - Crush, and Feed, Seed, and Residual - while exports make up the third category. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter9.html">Chapter 9</a>: Over the course of the last several chapters we have covered each category of supply and use. In tables 1 and 2 below, that literally means we covered how to forecast the numbers in each row of the USDA WASDE balance sheet.</p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter10.html">Chapter 10</a>: This chapter marks a break in forecasting philosophy from the approach we have used in previous chapters. In previous chapters we were forecasting from a viewpoint that was very structural and focused on market fundamentals. We built tools and information sources to monitor supply and demand conditions in commodity markets in fairly great detail. We utilized publicly available information and research published by various branches of the USDA. In this chapter, and going forward, we will take a reduced-form econometric approach. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter11.html">Chapter 11</a>: This chapter begins our foray into more a statistically oriented analysis of commodity prices. As a primer we will begin by reviewing a few statistical concepts to get ready for regression-based forecast analysis. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter12.html">Chapter 12</a>: In this chapter we introduce the first category of time-series econometric forecasting models we will learn: Auto-regressive Integrated Moving Average (ARIMA) models. This class of models is only capable of forecasting one market at a time, and we will see in later chapters how to econometrically consider (forecast) more than one market at a time when there is reason to believe two or markets are related. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter13.html">Chapter 13</a>: In this Chapter we describe the physical process of converting soybeans into meal and oil, as well as the price relationship that is maintained between these highly related commodities. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter14.html">Chapter 14</a>: This chapter covers the basic production cycle and ownership structures in beef cattle markets. We cover cow-calf, backgrounder, and finisher/feedlot operations. We discuss the basic geography of beef cattle production, and various biological constraints that impact market prices. 
+</p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter15.html">Chapter 15</a>: This chapter covers basic hog production, industry structure, and marketing practices, with an emphasis on how these affect hog prices. The hog market has undergone significant changes in industry organization in recent history. The industry used to be very unconcentrated with large numbers of independently owned and operated small and medium sized farms. Recently, the industry has trended toward more and more concentration in ownership, contracting and marketing agreements between owners and operators, and vertical integration in structure. </p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter16.html">Chapter 16</a></p>
+
+<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter17.html">Chapter 17</a></p>
 
       </section>
       <footer>
