--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Priceanalysis by mindymallory</title>
+    <title>Price Analysis by Mindy L. Mallory</title>
   </head>
 
   <body>
