--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h2>Introduction to Commodity Price Analysis: A Fundamental Approach</h2>
+        <h1>Commodity Price Analysis</h1>
+        <h2>A Fundamental Approach</h2>
         <h2>Mindy L. Mallory</h2>
         <a href="https://github.com/mindymallory/PriceAnalysis" class="button"><small>View project on</small> GitHub</a>
       </div>
