--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <a id="welcome-to-price-analysis" class="anchor" href="#welcome-to-price-analysis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Price Analysis.</h3>
 <p>This is a work-in-progress book for beginners on commodity price analysis from a fundamental perspective. These chapters are merely a collection of lecture notes used to teach ACE 427: Commodity Price Analysis at the <a href="http://ace.illinois.edu">University of Illinois</a> The course itself is based an the outline given to me by <a href="http://www.farmdoc.illinois.edu/irwin/">Scott Irwin</a>, who has taught ACE 427 at the University of Illinois for years. Many thanks to Scott for helping me get started organizing the course.</p>
 
+<p>This book is targeted at the upper level undergraduate student, or professional beginning a career related to commodity markets. The objective is to familiarize the reader with the sources of market information and research commonly used by practicing professionals working in the industry. </p>
+
 <p>This work is in the very early stages of completion. What is published here is just what I had time to scramble putting together before each lecture. Over the next few years of teaching the course I will edit, add, and amend the material here. In it's current state there are numerous errors, typos, and omissions. I publish it here with no warranty in hopes of soliciting comments. Feel free to use the material for your own study, or to use it in your own Price Analysis Course.</p>
 
 <p>
