--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ If you would like to collaborate on this project, please contact me. I especiall
 
 <p> 
 
-<a href="http://mindymallory.github.io/PriceAnalysis/Chapter1.html">Chapter 1: Introduction to Commodity Price Analysis and Forecasting</a> A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced.
+Chapter 1: <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodity.html">Introduction to Commodity Price Analysis and Forecasting</a> A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced.
 
 </p>
 
