--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@ If you would like to collaborate on this project, please contact me. I especiall
 
 <p> 
 
-Chapter 1: <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodity.html">Introduction to Commodity Price Analysis and Forecasting</a> A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced.
+Chapter 1 <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodity.html">Introduction to Commodity Price Analysis and Forecasting</a>: A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced.
 
 </p>
 
 <p> 
-<a href="http://mindymallory.github.io/PriceAnalysis/Chapter2.html">Chapter 2: How to Find Information about Commodity Markets</a> This chapter serves as an introduction to real-time and historical data sources, as well as an introduction to the analysts that conduct price analysis professionally and help us make sense of commodity prices. 
+Chapter 2 <a href="http://mindymallory.github.io/PriceAnalysis/HowtoFind.html">How to Find Information about Commodity Markets</a>: This chapter serves as an introduction to real-time and historical data sources, as well as an introduction to the analysts that conduct price analysis professionally and help us make sense of commodity prices. 
 
 </p>
-<p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter3.html">Chapter 3: Fundamental Analysis and the Balance Sheet</a>: Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. </p>
+Chapter 3 <p> <a href="http://mindymallory.github.io/PriceAnalysis/FundamentalAnalysisand.html">Fundamental Analysis and the Balance Sheet</a>: Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. </p>
 <p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter4.html">Chapter 4: Price Reaction to USDA Reports</a> Some of the USDA reports contain very sensitive market information causing market prices to adjust rapidly to new information about supply and demand. Access to the contents of a market sensitive report would result in the ability to perform 'insider trading' and obtain nearly risk-less profits.</p>
 
 <p> <a href="http://mindymallory.github.io/PriceAnalysis/Chapter5.html">Chapter 5: Forecasting Production</a>: The preceding chapters have served as a background about agricultural markets, and important informational events that drive commodity prices. Going forward, we will focus our energy on the more data and technical questions of actually forecasting elements of the balance sheet - and later, short term price changes using time-series econometric techniques.</p>
