--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ If you would like to collaborate on this project, please contact me. I especiall
 
 <h3>Table of Contents</h3>
 
+<h2>Section 1: Getting Started with Price Analysis for Commodity Markets</h2>
+
 <p> 
 
 Chapter 1, <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodity.html">Introduction to Commodity Price Analysis and Forecasting</a>: A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced.
@@ -67,6 +69,9 @@ Chapter 1, <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCo
 Chapter 2, <a href="http://mindymallory.github.io/PriceAnalysis/HowtoFind.html">How to Find Information about Commodity Markets</a>: This chapter serves as an introduction to real-time and historical data sources, as well as an introduction to the analysts that conduct price analysis professionally and help us make sense of commodity prices. 
 
 </p>
+
+<h2>Section 2: Balance Sheet Approach to Price Analysis in Grain and Oilseed Markets</h2>
+
 <p>
 Chapter 3, <a href="http://mindymallory.github.io/PriceAnalysis/FundamentalAnalysisand.html">Fundamental Analysis and the Balance Sheet</a>: Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. </p>
 
@@ -74,7 +79,6 @@ Chapter 3, <a href="http://mindymallory.github.io/PriceAnalysis/FundamentalAnaly
 
 <p>Chapter 5, <a href="http://mindymallory.github.io/PriceAnalysis/ForecastingProduction.html">Forecasting Production</a>: The preceding chapters have served as a background about agricultural markets, and important informational events that drive commodity prices. Going forward, we will focus our energy on the more data and technical questions of actually forecasting elements of the balance sheet - and later, short term price changes using time-series econometric techniques.</p>
 
-<p>Chapter 6, <a href="http://mindymallory.github.io/PriceAnalysis/EconomicDataand.html">Economic Data and Principles of Visualization</a>: This chapter reviews the basics of the presentation of economic data, descriptive statistics, visualizations based on charts, graphs, and tables, and the math and mechanics of estimating trend forecasting models.</p>
 
 <p>Chapter 7, <a href="http://mindymallory.github.io/PriceAnalysis/ForecastingUseof.html">Forecasting Use of Corn in the WASDE Balance Sheet</a>: In the WASDE balance sheet for corn there are three use categories. Two account for domestic consumption - Food, Seed and Industrial, and Feed and Residual - while exports make up the third category. Ethanol makes up a large portion of the Food, Seed, and Industrial category, so it is given its own line in the balance sheet. </p>
 
@@ -82,24 +86,34 @@ Chapter 3, <a href="http://mindymallory.github.io/PriceAnalysis/FundamentalAnaly
 
 <p>Chapter 9, <a href="http://mindymallory.github.io/PriceAnalysis/EndingStocksand.html">Ending Stocks and Generating a Price Forecast from the Balance Sheet</a>: Over the course of the last several chapters we have covered each category of supply and use. In tables 1 and 2 below, that literally means we covered how to forecast the numbers in each row of the USDA WASDE balance sheet.</p>
 
-<p>Chapter 10, <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodityTS.html">Introduction to Commodity Price Analysis and Forecasting with Time-series Econometric Models</a>: This chapter marks a break in forecasting philosophy from the approach we have used in previous chapters. In previous chapters we were forecasting from a viewpoint that was very structural and focused on market fundamentals. We built tools and information sources to monitor supply and demand conditions in commodity markets in fairly great detail. We utilized publicly available information and research published by various branches of the USDA. In this chapter, and going forward, we will take a reduced-form econometric approach. </p>
-
-<p>Chapter 11, <a href="http://mindymallory.github.io/PriceAnalysis/BasicStatisticsand.html">Basic Statistics and Linear Regression Review</a>: This chapter begins our foray into more a statistically oriented analysis of commodity prices. As a primer we will begin by reviewing a few statistical concepts to get ready for regression-based forecast analysis. </p>
-
-<p>Chapter 12, <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoSingle.html">Introduction to Single Market Models: ARIMA </a>: In this chapter we introduce the first category of time-series econometric forecasting models we will learn: Auto-regressive Integrated Moving Average (ARIMA) models. This class of models is only capable of forecasting one market at a time, and we will see in later chapters how to econometrically consider (forecast) more than one market at a time when there is reason to believe two or markets are related. </p>
 
 <p>Chapter 13, <a href="http://mindymallory.github.io/PriceAnalysis/TheSoybeanCrush.html">The Soybean Crush</a>: In this Chapter we describe the physical process of converting soybeans into meal and oil, as well as the price relationship that is maintained between these highly related commodities. </p>
+
+
+<h2>Section 3: Price Analysis in Livestock Markets</h2>
 
 <p>Chapter 14, <a href="http://mindymallory.github.io/PriceAnalysis/BeefCattleMarkets.html">Beef Cattle Markets and the Livestock Crush</a>: This chapter covers the basic production cycle and ownership structures in beef cattle markets. We cover cow-calf, backgrounder, and finisher/feedlot operations. We discuss the basic geography of beef cattle production, and various biological constraints that impact market prices. 
 </p>
 
 <p>Chapter 15, <a href="http://mindymallory.github.io/PriceAnalysis/HogMarkets.html">Hog Markets</a>: This chapter covers basic hog production, industry structure, and marketing practices, with an emphasis on how these affect hog prices. The hog market has undergone significant changes in industry organization in recent history. The industry used to be very unconcentrated with large numbers of independently owned and operated small and medium sized farms. Recently, the industry has trended toward more and more concentration in ownership, contracting and marketing agreements between owners and operators, and vertical integration in structure. </p>
 
+<h2>Section 4: Price Analysis in Energy Markets</h2>
+
 <p>Chapter 16, <a href="http://mindymallory.github.io/PriceAnalysis/CrudeOiland.html">Crude Oil and the Crack Spread</a>: Crude oil is an extremely important commodity. Much of the world’s economic activity is dependent on the energy products derived from this commodity. Crude oil was formed long ago when biological material fell to the bottom of ancient oceans. Over time the material was exposed to heat and pressure and transformed the material into crude oil. 
 </p>
 
 <p>Chapter 17, <a href="http://mindymallory.github.io/PriceAnalysis/EthanolMarketsand.html">Ethanol Markets and the Corn Crush Spread</a>: Ethanol production and consumption begin to increase rapidly around 2005, which is when the Energy Policy Act of 2005 and later the Energy Security and Independence Act of 2007 created the Renewable Fuels Standard (RFS). The RFS mandated quantities of ethanol that blenders of gasoline are required to blend into the retail gasoline supply. These annual mandates are revised every year, but they were designed to steadily increase year after year until 2015 when the mandate reached 15 billion gallons per year. 
 </p>
+
+<h2>Appendix 1: Review of Statistics and Intro to Time Series Analysis with Excel</h2>
+
+<p>Chapter 6, <a href="http://mindymallory.github.io/PriceAnalysis/EconomicDataand.html">Economic Data and Principles of Visualization</a>: This chapter reviews the basics of the presentation of economic data, descriptive statistics, visualizations based on charts, graphs, and tables, and the math and mechanics of estimating trend forecasting models.</p>
+
+<p>Chapter 10, <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodityTS.html">Introduction to Commodity Price Analysis and Forecasting with Time-series Econometric Models</a>: This chapter marks a break in forecasting philosophy from the approach we have used in previous chapters. In previous chapters we were forecasting from a viewpoint that was very structural and focused on market fundamentals. We built tools and information sources to monitor supply and demand conditions in commodity markets in fairly great detail. We utilized publicly available information and research published by various branches of the USDA. In this chapter, and going forward, we will take a reduced-form econometric approach. </p>
+
+<p>Chapter 11, <a href="http://mindymallory.github.io/PriceAnalysis/BasicStatisticsand.html">Basic Statistics and Linear Regression Review</a>: This chapter begins our foray into more a statistically oriented analysis of commodity prices. As a primer we will begin by reviewing a few statistical concepts to get ready for regression-based forecast analysis. </p>
+
+<p>Chapter 12, <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoSingle.html">Introduction to Single Market Models: ARIMA</a>: In this chapter we introduce the first category of time-series econometric forecasting models we will learn: Auto-regressive Integrated Moving Average (ARIMA) models. This class of models is only capable of forecasting one market at a time, and we will see in later chapters how to econometrically consider (forecast) more than one market at a time when there is reason to believe two or markets are related. </p>
 
 
         </section>
