--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <p>This book is targeted at the upper level undergraduate student, or professional beginning a career related to commodity markets. The objective is to familiarize the reader with the sources of market information and research commonly used by practicing professionals working in the industry. </p>
 
-<p>This work is in the very early stages of completion. What is published here is just what I had time to scramble putting together before each lecture. Over the next few years of teaching the course I will edit, add, and amend the material here. In it's current state there are numerous errors, typos, and omissions. I publish it here with no warranty in hopes of soliciting comments. Feel free to use the material for your own study, or to use it in your own Price Analysis Course.</p>
+<p>This work is in very early stages of completion. What is published here is just what I had time to scramble putting together before each lecture. Over the next few years of teaching the course I will edit, add, and amend the material here. In it's current state there are numerous errors, typos, and omissions. I publish it here with no warranty in hopes of soliciting comments. Feel free to use the material for your own study, or to use it in your own Price Analysis Course.</p>
 
 <p>
 If you would like to collaborate on this project, please contact me. I especially would appreciate a collaborator with expertise on livestock and crude oil markets. To see my plans for next steps on the project, see <a href="https://github.com/mindymallory/PriceAnalysis/issues">issues</a> in the github repository. 
