Finished 1.1 restructuring name customs

--- a/Excel-files/IntroductiontoCommodity_files/chart001.htm
+++ b/Excel-files/IntroductiontoCommodity_files/chart001.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link id=Main-File rel=Main-File href="../Ch1_PricesRecieved.htm">
+<link id=Main-File rel=Main-File href="../IntroductiontoCommodity.htm">
 <link rel=File-List href=filelist.xml>
 <link rel=Edit-Time-Data href=editdata.mso>
 <!--[if !mso]>
@@ -41,7 +41,7 @@ function fnUpdateTabs()
 }
 
 if (window.name!="frSheet")
- window.location.replace("../Ch1_PricesRecieved.htm");
+ window.location.replace("../IntroductiontoCommodity.htm");
 else
  fnUpdateTabs();
 //-->
