--- a/Excel-files/IntroductiontoCommodity_files/sheet001.htm
+++ b/Excel-files/IntroductiontoCommodity_files/sheet001.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link id=Main-File rel=Main-File href="../Ch1_PricesRecieved.htm">
+<link id=Main-File rel=Main-File href="../IntroductiontoCommodity.htm">
 <link rel=File-List href=filelist.xml>
 <link rel=Stylesheet href=stylesheet.css>
 <style>
@@ -34,7 +34,7 @@ function fnUpdateTabs()
 }
 
 if (window.name!="frSheet")
- window.location.replace("../Ch1_PricesRecieved.htm");
+ window.location.replace("../IntroductiontoCommodity.htm");
 else
  fnUpdateTabs();
 //-->
@@ -174,7 +174,7 @@ else
   <td class=xl65 align=right>9/1/1908</td>
   <td></td>
   <td>2007-Present</td>
-  <td class=xl66 align=right>$4.77</td>
+  <td class=xl66 align=right>$4.66</td>
   <td colspan=5 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -14271,12 +14271,122 @@ else
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>commodit<span style='display:none'>y_desc</span></td>
   <td>statisticcat_desc</td>
-  <td>unit_desc</td>
-  <td>state_name</td>
-  <td>year</td>
-  <td class=xl65>reference<span style='display:none'>_period_desc</span></td>
-  <td>Value</td>
-  <td class=xl65></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2015</td>
+  <td>JUL</td>
+  <td align=right>3.8</td>
+  <td class=xl65 align=right>7/1/2015</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2015</td>
+  <td>AUG</td>
+  <td align=right>3.68</td>
+  <td class=xl65 align=right>8/1/2015</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2015</td>
+  <td>SEP</td>
+  <td align=right>3.68</td>
+  <td class=xl65 align=right>9/1/2015</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2015</td>
+  <td>OCT</td>
+  <td align=right>3.67</td>
+  <td class=xl65 align=right>10/1/2015</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2015</td>
+  <td>NOV</td>
+  <td align=right>3.6</td>
+  <td class=xl65 align=right>11/1/2015</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2015</td>
+  <td>DEC</td>
+  <td align=right>3.65</td>
+  <td class=xl65 align=right>12/1/2015</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2016</td>
+  <td>JAN</td>
+  <td align=right>3.66</td>
+  <td class=xl65 align=right>1/1/2016</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2016</td>
+  <td>FEB</td>
+  <td align=right>3.57</td>
+  <td class=xl65 align=right>2/1/2016</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2016</td>
+  <td>MAR</td>
+  <td align=right>3.57</td>
+  <td class=xl65 align=right>3/1/2016</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2016</td>
+  <td>APR</td>
+  <td align=right>3.58</td>
+  <td class=xl65 align=right>4/1/2016</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2016</td>
+  <td>MAY</td>
+  <td align=right>3.68</td>
+  <td class=xl65 align=right>5/1/2016</td>
+  <td colspan=8 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 colspan=2 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td>$ / BU</td>
+  <td>US TOTAL</td>
+  <td align=right>2016</td>
+  <td>JUN</td>
+  <td align=right>3.82</td>
+  <td class=xl65 align=right>6/1/2016</td>
   <td colspan=8 style='mso-ignore:colspan'></td>
  </tr>
  <![if supportMisalignedColumns]>
