--- a/Excel-files/IntroductiontoCommodity_files/chart002.htm
+++ b/Excel-files/IntroductiontoCommodity_files/chart002.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link id=Main-File rel=Main-File href="../Ch1_PricesRecieved.htm">
+<link id=Main-File rel=Main-File href="../IntroductiontoCommodity.htm">
 <link rel=File-List href=filelist.xml>
 <link rel=Edit-Time-Data href=editdata.mso>
 <!--[if !mso]>
@@ -34,14 +34,14 @@ function fnUpdateTabs()
   if (parent.window.g_iIEVer>=4) {
    if (parent.document.readyState=="complete"
     && parent.frames['frTabs'].document.readyState=="complete")
-   parent.fnSetActiveSheet(2);
+   parent.fnSetActiveSheet(1);
   else
    window.setTimeout("fnUpdateTabs();",150);
  }
 }
 
 if (window.name!="frSheet")
- window.location.replace("../Ch1_PricesRecieved.htm");
+ window.location.replace("../IntroductiontoCommodity.htm");
 else
  fnUpdateTabs();
 //-->
@@ -50,7 +50,7 @@ else
 </head>
 
 <body>
-<img src=image003.png alt="Corn 1974-2015">
+<img src=image002.png alt="Corn 1929-2015">
 </body>
 
 </html>
