--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ If you would like to collaborate on this project, please contact me. I especiall
 
 <h3>Section 1: Getting Started with Price Analysis for Commodity Markets</h3>
 
+<p>1.0 <a href="http://mindymallory.github.io/PriceAnalysis/PrimerforGrain.html">Primer for Grain and Oilseed Markets</a>: Since commodities are natural things that are subject to biological processes, you must first understand the basic biological processes involved in the commodity's production in order to understand and anticipate what happens to it's price. This chapter introduces the basic production processes and timeline for major grains and oilseeds: Corn, Soybeans, Hard Red Winter Wheat (KC wheat), Hard Red Spring Wheat (Minneapolis wheat), and Soft Red Winter Wheat. <a href="http://mindymallory.github.io/PriceAnalysis/PrimerforGrain-Lecture.html">Slides</a>
+
+
 <p>1.1 <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodity.html">Introduction to Commodity Price Analysis and Forecasting</a>: A commodity is a good that can be supplied without qualitative differences. A bushel of wheat is regarded as a bushel of wheat everywhere. Commodities are fully or partially fungible so that the market treats a unit of good the same no matter who produced it or where it was produced. <a href="http://mindymallory.github.io/PriceAnalysis/IntroductiontoCommodity-Lecture.html">Slides</a>
 
 </p>
