--- a/IntroductiontoCommodity-Lecture.html
+++ b/IntroductiontoCommodity-Lecture.html
@@ -188,15 +188,14 @@ Mindy L. Mallory
 </div>
 <div id="forecasting-basics-4" class="slide section level1">
 <h1>Forecasting Basics</h1>
-<pre><code>- Simple approaches tend to work best in real world applications
-    - Based on decades of experience and research
-    - Simpler models can be estimated more precisely
-    - Because simpler models can be more easily interpreted  and understood, unusual behavior and outcomes can be more easily spotted. 
-    
-- It is easier to communicate the basic behavior and design of simple approaches, so they are more likely to be used by decision-makers.
-
-- Simple approaches lessen the chances of data mining problems. 
-    - If a complex model is tailored to fit historical data very well, but does not capture the true nature of the data process, forecasts will perform poorly. </code></pre>
+<p>Simple approaches tend to work best in real world applications</p>
+<ul>
+<li>Based on decades of experience and research</li>
+<li>Simpler models can be estimated more precisely</li>
+<li><p>Because simpler models can be more easily interpreted and understood, unusual behavior and outcomes can be more easily spotted.</p></li>
+<li><p>It is easier to communicate the basic behavior and design of simple approaches, so they are more likely to be used by decision-makers.</p></li>
+<li><p>Simple approaches lessen the chances of data mining problems. - If a complex model is tailored to fit historical data very well, but does not capture the true nature of the data process, forecasts will perform poorly.</p></li>
+</ul>
 </div>
 <div id="forecasting-basics-5" class="slide section level1">
 <h1>Forecasting Basics</h1>
