--- a/PrimerforGrain-Lecture.html
+++ b/PrimerforGrain-Lecture.html
@@ -22,6 +22,7 @@ Mindy L. Mallory
 <div id="primer-for-grain-and-oilseed-markets" class="slide section level1">
 <h1>Primer for Grain and Oilseed Markets</h1>
 <p>Since commodities are natural things that are subject to biological processes, you must first understand the basic biological processes involved in the commodity’s production in order to understand and anticipate what happens to it’s price. This chapter introduces the basic production processes and timeline for major grains and oilseeds: Corn, Soybeans, Hard Red Winter Wheat (KC wheat), Hard Red Spring Wheat (Minneapolis wheat), and Soft Red Winter Wheat.</p>
+<p><a href="http://mindymallory.github.io/PriceAnalysis/">Return to Book Homepage</a></p>
 </div>
 <div id="corn" class="slide section level1">
 <h1>Corn</h1>
